@@ -1,3 +1,7 @@
+2004-01-12 Bernhard Held <bernhard@bernhardheld.de>
+
+	* src/SDCCast.c (decorateType): fixed bug introduced today
+
 2004-01-12  Borut Razem <borut.razem@siol.net>
 
 	* src/SDCC.lex, support/Util/SDCCerr.h, support/Util/SDCCerr.c,
